fdo#62088: Fix regression introduced by the DateTime incompatible change.

It is not good to mess with the stream operators, more so when the size of the
data changes ;-)

Change-Id: Id02b83224496a28575f4e12196892de198793983